--- a/2023.html
+++ b/2023.html
@@ -11,7 +11,7 @@
 
 
 
-<title>2023</title>
+<title>2024</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -354,25 +354,47 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">2023</h1>
+<h1 class="title toc-ignore">2024</h1>
 
 </div>
 
 
-<p><strong>생일 편지</strong></p>
-<p>스무살 생일 정말 축하해~<br />
-당일에 좋은 추억 생기길<br />
+<p>당신을 알게되고부터 다섯번째 겨울이 다가옵니다.</p>
+<p>5년이라는 시간은 누군가를 잘 알기엔 너무 짧으면서<br />
+무언가가 변하지 않기엔 너무 긴 세월입니다.<br />
 <br />
-똑똑해서 내 응원 없이도<br />
-앞가림 다 잘 하겠지만<br />
+내가 기억하는 당신은 얼마나 남았을까요<br />
+나의 마음은 얼마나 변했을까요<br />
+8000여일을 살아온 나는 개중에 몇 날이나 기억하고 있을지 ,,,<br />
 <br />
-언제나 응원하니까<br />
-언제든지 화이팅 힘내<br />
 <br />
-남은 2023년도 잘 보내길<br />
-항상 고마웠어~<br />
 <br />
-2023년 8월 12일</p>
+당신의 시선 끝을 궁금해하며<br />
+미안할 일과 고마울 일을 늘려나갔다는<br />
+재미없는 옛날 이야기와<br />
+<br />
+부끄러운 내 마음 숨기기 급급하여<br />
+흘린 눈물들이 기억을 적시게되는<br />
+재미없는 어제의 이야기는<br />
+<br />
+어딘가 일맥상통하는 부분이 있어요<br />
+<br />
+<br />
+<br />
+개중에 특별한 몇 날에 당신이 가득함을<br />
+그리고 현재의 단어속에 당신이 가득함을<br />
+바보같은 제가 어떻게 사랑하지 않을 수 있나요<br />
+<br />
+<br />
+<br />
+내 마음을 알아줄 사람은 나 밖에 없고<br />
+이제 나는 내 마음이 소중하다고 믿기로 했습니다.<br />
+그리고 그렇게 만들거에요.<br />
+저는 고집이 세니까요 ,,,<br />
+<br />
+<br />
+<br />
+사랑해요,,, 앞으로도 쭉이요,,,</p>
 
 
 
